--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -12,44 +12,42 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
+    <h2 class="text-center mt-4">Contact Us</h2>
     <div class="row">
-        <div class="col-12 col-md-6">
-            <hr>
-            <h2 class="logo-font mb-4">Contact Us</h2>
-            <hr>
+        <div class="col-md-8 offset-md-2">
+            <div class="card">
+                <div class="card-body">
+                    <form method="post">
+                        {% csrf_token %}
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Name:</label>
+                            {{ form.name }}
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email:</label>
+                            {{ form.email }}
+                        </div>
+                        <div class="mb-3">
+                            <label for="subject" class="form-label">Subject:</label>
+                            {{ form.subject }}
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">Message:</label>
+                            {{ form.message }}
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
-
-    <form method="post">
-        {% csrf_token %}
-        <div class="row">
-            <div class="col-md-12">
-                <div class="mb-3">
-                    <label for="{{ form.name.id_for_label }}" class="form-label">Name:</label>
-                    {{ form.name }}
-                </div>
-            </div>
-            <div class="col-md-12">
-                <div class="mb-3">
-                    <label for="{{ form.email.id_for_label }}" class="form-label">Email:</label>
-                    {{ form.email }}
-                </div>
-            </div>
-            <div class="col-md-12">
-                <div class="mb-3">
-                    <label for="{{ form.subject.id_for_label }}" class="form-label">Subject:</label>
-                    {{ form.subject }}
-                </div>
-            </div>
-            <div class="col-md-12">
-                <div class="mb-3">
-                    <label for="{{ form.message.id_for_label }}" class="form-label">Message:</label>
-                    {{ form.message }}
-                </div>
-            </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
 </div>
 {% endblock %}
+
+
+
+
+
+
+
 
