Styling change to contact form

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -162,6 +162,15 @@ footer {
   color: #fff !important;
 }
 
+.custom-form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+.custom-form-group label {
+  font-weight: bold;
+}
+
 
 /* -------------------------------- Media Queries */
 
