Add testomonial link to nav bar

--- a/testomonial/templates/testomonial/add_testimonial.html
+++ b/testomonial/templates/testomonial/add_testimonial.html
@@ -41,7 +41,7 @@
                                 <label for="content" class="form-label">Content</label>
                                 <textarea class="form-control" id="content" name="content" rows="4"></textarea>
                             </div>
-                            <button class="btn btn-primary" type="submit">Submit</button>
+                            <button class="btn" type="submit">Submit</button>
                         </form>
                     </div>
                 </div>
