--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
                   </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="{% url 'testimonial_list' %}">Testimonials</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
