Add required field to testominials form

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -40,7 +40,7 @@
                   <div class="card-body">
                       <h5 class="card-title">Celtic Crosses</h5>
                       <p class="card-text"> All Celtic Crosses.</p>
-                      <a href="{% url 'products' %}?category=pendants" class="btn btn-primary">View Products</a>
+                      <a href="{% url 'products' %}?category=pendants" class="btn btn-primary">View Categories</a>
                   </div>
               </div>
           </div>
@@ -50,7 +50,7 @@
                <div class="card-body">
                   <h5 class="card-title">Claddagh Ring</h5>
                    <p class="card-text">All Claddagh Rings</p>
-                   <a href="{% url 'products' %}?category=claddagh_rings" class="btn btn-primary">View Products</a>
+                   <a href="{% url 'products' %}?category=claddagh_rings" class="btn btn-primary">View Categories</a>
                   </div>
               </div>
           </div>
@@ -60,7 +60,7 @@
               <div class="card-body">
                 <h5 class="card-title">Celtic Earrings</h5>
                 <p class="card-text">All Celtic Earrings.</p>
-                <a href="{% url 'products' %}?category=earrings" class="btn btn-primary">View Products</a>
+                <a href="{% url 'products' %}?category=earrings" class="btn btn-primary">View Categories</a>
               </div>
             </div>
           </div>  
@@ -70,7 +70,7 @@
               <div class="card-body">
                 <h5 class="card-title">Brooches</h5>
                 <p class="card-text">Irish Brooches</p>
-                <a href="{% url 'products' %}?category=celtic-brooches" class="btn btn-primary">View Products</a>
+                <a href="{% url 'products' %}?category=celtic-brooches" class="btn btn-primary">View Categories</a>
               </div>
             </div>
           </div>
