--- a/testomonial/templates/testomonial/add_testimonial.html
+++ b/testomonial/templates/testomonial/add_testimonial.html
@@ -31,16 +31,26 @@
                             {% csrf_token %}
                             <div class="mb-3">
                                 <label for="author" class="form-label">Author</label>
-                                <input type="text" class="form-control" id="author" name="author">
+                                <input type="text" class="form-control" id="author" name="author" required>
                             </div>
                             <div class="mb-3">
                                 <label for="product" class="form-label">Product</label>
-                                <input type="text" class="form-control" id="product" name="product">
+                                <input type="text" class="form-control" id="product" name="product" required>
                             </div>
                             <div class="mb-3">
                                 <label for="content" class="form-label">Content</label>
-                                <textarea class="form-control" id="content" name="content" rows="4"></textarea>
+                                <textarea class="form-control" id="content" name="content" rows="4" required></textarea>
                             </div>
+                            <div class="mb-3">
+                                <label for="rating" class="form-label">Rating (1-5)</label>
+                                <textarea class="form-control" id="rating" name="rating" rows="4" required></textarea>
+                                {% if form.rating.errors %}
+                                    <div class="text-danger">
+                                        {{ form.rating.errors|join:", " }}
+                                    </div>
+                                {% endif %}
+                            </div>
+                            
                             <button class="btn" type="submit">Submit</button>
                         </form>
                     </div>
