--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -35,7 +35,7 @@
                             <label for="message" class="form-label">Message:</label>
                             {{ form.message }}
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn">Submit</button>
                     </form>
                 </div>
             </div>
