--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -110,6 +110,12 @@
             </div>
         </div>
     </div>
+<!-- templates/product_detail.html -->
+
+{% if user.is_authenticated %}
+  <a href="{% url 'save_for_later' product.id %}">Save for Later</a>
+{% endif %}
+
 {% endblock %}
 
 {% block postloadjs %}
