--- a/templates/base.html
+++ b/templates/base.html
@@ -171,30 +171,32 @@
     {% endblock %}
 
     <footer class="footer mt-auto py-3 dark-bg">
-        <div class="container">
+      <div class="container">
           <div class="row">
-            <div class="col-md-4">
-              <!-- MailChimp Signup Form -->
-              <form action="https://gmail.us21.list-manage.com/subscribe/post?u=c6e6026089b9ba38b17c7b651&amp;id=3df5b95a1c&amp;f_id=009f60e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" method="post" class="form-inline">
-                <label for="email" class="sr-only">Email</label>
-                <input type="email" name="EMAIL" class="form-control mr-2" placeholder="Enter your email" required>
-                <br>
-                <button type="submit" class="button">Subscribe to our Newsletter</button>
-              </form>
-            </div>
-            <div class="col-md-4 text-center">
-              <!-- Name of Your Site -->
-              <h5>Emerald Isle Jewelry 2023</h5>
-            </div>
-            <div class="col-md-4 text-right">
-                <a href="#" class="social-icons" target="_blank">
-                  <p>Find us on Facebook:</p>
-                  <i class="fab fa-facebook-square fa-2x"></i>
-                </a>
-              </div>   
+              <div class="col-md-4">
+                  <form action="https://gmail.us21.list-manage.com/subscribe/post?u=c6e6026089b9ba38b17c7b651&amp;id=3df5b95a1c&amp;f_id=009f60e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" method="post" class="form-inline">
+                      <label for="email" class="sr-only">Email</label>
+                      <div class="input-group">
+                          <input type="email" name="EMAIL" class="form-control" placeholder="Enter your email" required>
+                          <div class="input-group-append">
+                              <button type="submit" class="btn btn-primary">Subscribe</button>
+                          </div>
+                      </div>
+                  </form>
+              </div>
+              <div class="col-md-4 text-center">
+                  <h5>Emerald Isle Jewelry 2023</h5>
+              </div>
+              <div class="col-md-4 text-md-right">
+                  <a href="https://www.facebook.com/emeraldislejewelry/" class="social-icons" target="_blank">
+                      <p>Find us on Facebook:</p>
+                      <i class="fab fa-facebook-square fa-2x"></i>
+                  </a>
+              </div>
           </div>
-        </div>
-      </footer>      
+      </div>
+  </footer>
+      
     
   </body>
 </html>
