--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     {% endblock %}
 
     {% block extra_meta %}
@@ -179,7 +180,7 @@
                       <div class="input-group">
                           <input type="email" name="EMAIL" class="form-control" placeholder="Enter your email" required>
                           <div class="input-group-append">
-                              <button type="submit" class="btn btn-primary">Subscribe</button>
+                              <button type="submit" class="button">Subscribe to our Newsletter</button>
                           </div>
                       </div>
                   </form>
