--- a/templates/base.html
+++ b/templates/base.html
@@ -170,7 +170,6 @@
   </script>
   <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
     {% endblock %}
-
     <footer class="footer mt-auto py-3 dark-bg">
       <div class="container">
           <div class="row">
@@ -180,7 +179,7 @@
                       <div class="input-group">
                           <input type="email" name="EMAIL" class="form-control" placeholder="Enter your email" required>
                           <div class="input-group-append">
-                              <button type="submit" class="button">Subscribe to our Newsletter</button>
+                              <button type="submit" class="button">Subscribe</button>
                           </div>
                       </div>
                   </form>
@@ -196,8 +195,6 @@
               </div>
           </div>
       </div>
-  </footer>
-      
-    
+  </footer>    
   </body>
 </html>
