--- a/templates/base.html
+++ b/templates/base.html
@@ -173,8 +173,8 @@
    
     <footer class="footer mt-auto py-3 dark-bg">
       <div class="container">
-          <div class="row">
-              <div class="col-md-4">
+        <div class="row align-items-center">
+            <div class="col-md-4 mb-4 mb-md-0">
                 <div id="mc_embed_shell">
             <div id="mc_embed_signup">
                 <form action="https://gmail.us21.list-manage.com/subscribe/post?u=c6e6026089b9ba38b17c7b651&amp;id=3df5b95a1c&amp;f_id=009f60e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
@@ -204,13 +204,12 @@
               </div>
               <div class="col-md-4 text-md-right">
                   <a href="https://www.facebook.com/emeraldislejewelry/" class="social-icons" target="_blank">
-                      <p>Find us on Facebook:</p>
                       <i class="fab fa-facebook-square fa-2x"></i>
+                      <span class="ml-2">Find us on Facebook</span>
                   </a>
               </div>
           </div>
       </div>
-  </footer>  
-    
+  </footer>   
   </body>
 </html>
