Make jero section bigger

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,8 +12,8 @@
 {% block content %}
 
 <!-- Hero Section -->
-<div class="container h-100">
-  <div class="row h-100">
+<div class="container hero-section">
+  <div class="row">
       <div class="col-7 col-md-6 my-auto">
           <h1 class="display-4 logo-font text-white">
               Made with love In Ireland
@@ -26,9 +26,6 @@
       </div>
   </div>
 </div>
-
-
-
 
   <!-- Catergories -->
     <section class="container my-5">
@@ -125,6 +122,5 @@
       </div>
     </div>
   </section>
-
 
 {% endblock %}
