--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,8 +13,8 @@
 
 <!-- Hero Section -->
 <div class="container hero-section">
-  <div class="row">
-      <div class="col-7 col-md-6 my-auto">
+  <div class="row align-items-center justify-content-center">
+      <div class="col-7 col-md-6 text-center">
           <h1 class="display-4 logo-font text-white">
               Made with love In Ireland
           </h1>
