--- a/static/css/base.css
+++ b/static/css/base.css
@@ -357,7 +357,7 @@ color: #17a2b8; /* text-info */
   background: #494932;
   clear: left;
   font: 16px Helvetica, Arial, sans-serif;
-  width: 600px;
+  width: 30em;
 }
 
 /* fixed top navbar only on medium and up */
