--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+        <link rel="shortcut icon" type="image/png" href="https://emeraldislejewelry.s3.eu-west-1.amazonaws.com/media/favicon.ico">
     {% endblock %}
 
     {% block extra_meta %}
