--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -11,6 +11,7 @@
 
 {% block content %}
 <section class="contact-section">
+    <div class="overlay"></div>
     <div class="container">
         <h2 class="text-center mt-4">Contact Us</h2>
         <div class="row justify-content-center">
