Fix errors in python code

--- a/templates/base.html
+++ b/templates/base.html
@@ -203,7 +203,7 @@
                   <h5>Emerald Isle Jewelry 2023</h5>
               </div>
               <div class="col-md-4 text-md-right">
-                  <a href="https://www.facebook.com/emeraldislejewelry/" class="social-icons" target="_blank">
+                <a href="https://www.facebook.com/emeraldislejewelry/" class="social-icons" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
                       <i class="fab fa-facebook-square fa-2x"></i>
                       <span class="ml-2">Find us on Facebook</span>
                   </a>
