--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -36,7 +36,7 @@
                                 <label for="message" class="form-label">Message:</label>
                                 <div>{{ form.message }}</div>
                             </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-primary" aria-label="Submit Form">Submit</button>
                         </form>
                     </div>
                 </div>
