--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -21,20 +21,20 @@
                         <form method="post">
                             {% csrf_token %}
                             <div class="mb-3">
-                                <label for="name" class="form-label">Name:</label>
-                                <div>{{ form.name }}</div>
+                                <label for="{{ form.name.id_for_label }}" class="form-label">Name:</label>
+                                {{ form.name }}
                             </div>
                             <div class="mb-3">
-                                <label for="email" class="form-label">Email:</label>
-                                <div>{{ form.email }}</div>
+                                <label for="{{ form.email.id_for_label }}" class="form-label">Email:</label>
+                                {{ form.email }}
                             </div>
                             <div class="mb-3">
-                                <label for="subject" class="form-label">Subject:</label>
-                                <div>{{ form.subject }}</div>
+                                <label for="{{ form.subject.id_for_label }}" class="form-label">Subject:</label>
+                                {{ form.subject }}
                             </div>
                             <div class="mb-3">
-                                <label for="message" class="form-label">Message:</label>
-                                <div>{{ form.message }}</div>
+                                <label for="{{ form.message.id_for_label }}" class="form-label">Message:</label>
+                                {{ form.message }}
                             </div>
                             <button type="submit" class="btn btn-primary" aria-label="Submit Form">Submit</button>
                         </form>
@@ -45,4 +45,5 @@
     </div>
 </section>
 {% endblock %}
+
 
