--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -21,19 +21,19 @@
                         <form method="post">
                             {% csrf_token %}
                             <div class="mb-3">
-                                <label for="{{ form.name.id_for_label }}" class="form-label">Name:</label>
+                                <label for="id_name" class="form-label">Name:</label>
                                 {{ form.name }}
                             </div>
                             <div class="mb-3">
-                                <label for="{{ form.email.id_for_label }}" class="form-label">Email:</label>
+                                <label for="id_email" class="form-label">Email:</label>
                                 {{ form.email }}
                             </div>
                             <div class="mb-3">
-                                <label for="{{ form.subject.id_for_label }}" class="form-label">Subject:</label>
+                                <label for="id_subject" class="form-label">Subject:</label>
                                 {{ form.subject }}
                             </div>
                             <div class="mb-3">
-                                <label for="{{ form.message.id_for_label }}" class="form-label">Message:</label>
+                                <label for="id_message" class="form-label">Message:</label>
                                 {{ form.message }}
                             </div>
                             <button type="submit" class="btn btn-primary" aria-label="Submit Form">Submit</button>
@@ -45,5 +45,7 @@
     </div>
 </section>
 {% endblock %}
+
+
 
 
