Add images to readme

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,21 @@
     {% endblock %}
 
     <title>Emerald Isle Jewelry {% block extra_title %}{% endblock %}</title>
+
+    <meta name="description" 
+        content="Discover the Magic of Ireland: Authentic Celtic Jewelry Store
+        Welcome to Emerald Isle Jewelry, your premier destination for exquisite Irish Celtic jewelry. 
+        Immerse yourself in the rich heritage and timeless beauty of Ireland 
+        with our handcrafted collection that captures the essence of Celtic culture. Each piece is a testament to the intricate craftsmanship 
+        and deep symbolism that has been passed down through generations."
+        >
+    <meta name="keywords" 
+        content="celtic jewelry, celtic jewellery, claddagh ring, claddagh rings, ladies claddagh ring, 
+        silver claddagh ring, connemara marble, irish made jewelry, engagement ring, celtic cross, ladies claddagh engagement ring,
+        mens claddagh ring, emerald claddagh ring, celtic brooch, silver celtic brooch, shamrock jewelry, how to wear a claddagh ring, 
+        irish made claddagh ring, shamrock wristwear, trinity style earrings, celtic earrings, irish earrings , mothers day gift"
+        >
+
   </head>
   <body>
     <header class="container-fluid px-0 fixed-top">
