--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -11,7 +11,6 @@
 
 {% block content %}
 <section class="contact-section">
-    <div class="overlay"></div>
     <div class="container">
         <h2 class="text-center mt-4">Contact Us</h2>
         <div class="row justify-content-center">
@@ -21,22 +20,22 @@
                         <form method="post">
                             {% csrf_token %}
                             <div class="mb-3">
-                                <label for="id_name" class="form-label">Name:</label>
-                                {{ form.name }}
+                                <label for="name" class="form-label">Name:</label>
+                                <div>{{ form.name }}</div>
                             </div>
                             <div class="mb-3">
-                                <label for="id_email" class="form-label">Email:</label>
-                                {{ form.email }}
+                                <label for="email" class="form-label">Email:</label>
+                                <div>{{ form.email }}</div>
                             </div>
                             <div class="mb-3">
-                                <label for="id_subject" class="form-label">Subject:</label>
-                                {{ form.subject }}
+                                <label for="subject" class="form-label">Subject:</label>
+                                <div>{{ form.subject }}</div>
                             </div>
                             <div class="mb-3">
-                                <label for="id_message" class="form-label">Message:</label>
-                                {{ form.message }}
+                                <label for="message" class="form-label">Message:</label>
+                                <div>{{ form.message }}</div>
                             </div>
-                            <button type="submit" class="btn btn-primary" aria-label="Submit Form">Submit</button>
+                            <button type="submit" class="btn btn-primary">Submit</button>
                         </form>
                     </div>
                 </div>
