--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -10,7 +10,7 @@
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
                 <h1 class="display-4 logo-font text-white">
-                    The page you are looking for isn't available
+                    The page you are looking for is not available
                 </h1>
                 <div class="my-5">
                     <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
